<resources>
    <string name="app_name">Plan Buy and Eat</string>
    <string name="list_plats">Meal list</string>
    <string name="ingredients">Ingredients</string>
    <string name="ajouter">Add</string>
    <string name="parametre">Settings</string>
    <string name="generer">Generate</string>
    <string name="shopping">Shopping lists</string>
    <string name="periode_de_shopping">Shopping period length</string>
    <string name="date_de_debut">Starting Date</string>
    <string name="modifer_date">Change</string>
    <string name="nb_plats_pjour">Numbers of meals per day</string>
    <string name="login">Login</string>
    <string name="Signin">Sign In</string>
    <string name="Signup">Sign Up</string>
    <string name="Map">Map</string>
    <string name="nomUtilisateur">Username</string>
    <string name="mdp">Password</string>
    <string name="nom">Last Name</string>
    <string name="prenom">First Name</string>
    <string name="mdpx">Confirm Password</string>
    <string name="wrong_cred">Incorrect username or password</string>
    <string name="register">Register</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="passwd_not_matching">Password confirmation is wrong</string>
    <string name="planning">Planning</string>
    <string name="repertoire">Meal list</string>
    <string name="compte">Account</string>
    <string name="changePass">Change password</string>
    <string name="changeInfo">Change user information</string>
    <string name="validate">Validate</string>
    <string name="oldPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="newPassx">New password confirmation</string>
    <string name="passCheck">Type your password</string>
    <string name="changesApplyed">Modifications applied</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="logout">Log out</string>
    <string name="accSetting">Account settings</string>
    <string name="changeInfoDesc">Change your personal information such as firstname and username</string>
    <string name="changePassDesc">Replace your current password</string>
    <string name="logoutDesc">Disconnect your account</string>
    <string name="liste_du">List on</string>
    <string name="username_exist">Username already exist</string>
    <string name="no_meals">There no meal in the meal list</string>
    <string name="selected_meals">Meals on the selected day below</string>
</resources>