<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/parametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/periode_de_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editview_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
            android:text="@string/date_de_debut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <TextView
           android:id="@+id/text_dateDebutPeriode"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/btn_modifierDateDebutPeriode"
           android:text="@string/modifer_date"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nb_plats_pjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editview_nbPlatPjour"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>