<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_changeinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">
    <ImageButton
        android:id="@+id/btn_back_from_change_info"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@drawable/card"
        android:layout_gravity="left"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rectangle">
            <TextView
                android:text="@string/changeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                style="@style/Theme.PlanBuyAndEat.activityTitle"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="0dp">
                <TextView
                    android:text="@string/prenom"
                    style="@style/Theme.PlanBuyAndEat.intputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/editview_changePrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:text="@string/nom"
                    style="@style/Theme.PlanBuyAndEat.intputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/editview_changeNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/nomUtilisateur"
                    style="@style/Theme.PlanBuyAndEat.intputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/editview_changeUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/passCheck"
                    style="@style/Theme.PlanBuyAndEat.intputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/editview_passCheckBeforeChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_chagneValidateInfo"
                style="@style/Theme.PlanBuyAndEat.Button"
                android:text="@string/validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>