<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Planning.Planning">
    <org.naishadhparmar.zcustomcalendar.CustomCalendar
        android:id="@+id/calendar_planning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="plat1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:text="plat1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_plannigSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametre"/>

        <Button
            android:id="@+id/btn_generatePlanning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generer" />
    </LinearLayout>
    <TextView
        android:text="@string/shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ListView
        android:id="@+id/list_plannig"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>
</LinearLayout>